--- a/Takori.html
+++ b/Takori.html
@@ -6,14 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Annia’s Resume</title>
     <style>
-        body {
-            background-color: pink;
-            margin: 0; /* Remove default margin to extend background to the edges */
-            padding: 0; /* Remove default padding to extend background to the edges */
-        }
-
         table {
-            border: 2px solid purple;
+            border: 2px solid pink;
         }
     </style>
 </head>
