--- a/Takori.html
+++ b/Takori.html
@@ -19,7 +19,7 @@
     </nav>
 
     <header>
-        <h1>Takori</h1>
+        <h1>Annia Takori</h1>
         <p>This website will provide insightful information on how to begin your journey in the law field.</p>
     </header>
 
@@ -70,8 +70,9 @@
     <section id="education">
         <h2>Education</h2>
         <dl>
-            <dt>Junior</dt>
-            <dd><a href="https://www.albany.edu">University at Albany</a></dd>
+            <dt>Major: Informatics</dt>
+            <dt>Minor: Communication</dt>
+            <dd><a href="https://www.albany.edu/cehc/programs/bs-informatics">University at Albany - Informatics</a></dd>
         </dl>
     </section>
 
