--- a/Takori.html
+++ b/Takori.html
@@ -1,5 +1,5 @@
-<!DOCTYPE index.html>
-<index.html lang="en">
+<!DOCTYPE.html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -78,4 +78,4 @@
 
 </body>
 
-</index.html>
+</html>
